net-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-debug
spec:
  containers:
    - name: curl-container
      image: curlimages/curl:latest
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
