nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
        - name: nginx
          image: banishadocker91/my-final-nginx:v2
          
          ports:
            - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: welcome-message-configmap
