custom-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-custom-route
  labels:
    app: my-custom-route
    environment: dev
spec:
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
